--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,42 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import TopCatch from "~/components/catch/TopCatch.astro";
+import SNSList from "~/components/global/SNSList.astro";
+import PageContent from "~/layouts/PageContent.astro";
+
+import TopNavi from "~/components/home/TopNavi.astro";
+import NewsList from "~/components/post/NewsList.astro";
+import EventList from "~/components/post/EventList.astro";
+import ColumnList from "~/components/post/ColumnList.astro";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<PageContent>
+  <TopCatch />
+  <main>
+    <p class="main_copy">
+      イエノコトは太宰府市通古賀にある工務店。 <br />
+      いくら素敵な家を建てても、<br />
+      暮らしが整っていなくて、毎日イライラ<br />
+      していたらなんだか幸せじゃない。
+      <strong>「家創りは、暮らし創り」</strong>
+      そんな想いを持つ女性が集まって生まれた<br />イエノコトだからできるコト。
+    </p>
+    <TopNavi />
+    <NewsList />
+    <EventList />
+    <ColumnList />
+    <h3>Follow us</h3>
+
+    <SNSList />
+  </main>
+</PageContent>
+<style lang="scss">
+  .main_copy {
+    margin-top: 243px;
+    text-align: center;
+    line-height: 3.75;
+    strong {
+      display: block;
+      font-size: 24px;
+    }
+  }
+</style>
