HOME及びページ作成準備

--- a/src/components/global/SNSList.astro
+++ b/src/components/global/SNSList.astro
@@ -6,7 +6,7 @@ import Line from "~/img/sns_line.png";
 import Youtube from "~/img/sns_youtube.png";
 ---
 
-<nav class="sns-list">
+<nav class="sns_list">
   <ul>
     <li>
       <a href="https://www.instagram.com/ienokoto_no_ie/">
@@ -31,7 +31,7 @@ import Youtube from "~/img/sns_youtube.png";
   </ul>
 </nav>
 <style lang="scss">
-  .sns-list {
+  .sns_list {
     ul {
       margin: auto;
       width: 298px;
