--- a/src/layouts/PageContent.astro
+++ b/src/layouts/PageContent.astro
@@ -2,26 +2,32 @@
 import "reset-css";
 import "../styles/global.scss";
 import Navi from "~/components/global/Navi.astro";
-import Header from "~/components/global/Header.astro";
+import Head from "~/components/global/Head.astro";
 import Footer from "~/components/global/Footer.astro";
 import ContentBanner from "~/components/common/ContentBanner.astro";
 import AboutModelHouse from "~/components/common/AboutModelHouse.astro";
+const { class: className } = Astro.props;
 ---
 
-<Header />
-<script src="../scripts/global.ts"></script>
-<name id="head"></name>
-<Navi />
-<slot />
-<AboutModelHouse />
-<ContentBanner />
-<Footer />
-
-<style lang="scss" is:global>
-  .content-banner {
-    margin-top: 162px;
-  }
-  footer {
-    margin-top: 169px;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="ja">
+  <Head />
+  <script src="../scripts/global.ts"></script>
+  <body class={className}>
+    <header id="head">
+      <Navi />
+    </header>
+    <slot />
+    <AboutModelHouse />
+    <ContentBanner />
+    <Footer />
+    <style lang="scss" is:global>
+      .content-banner {
+        margin-top: 162px;
+      }
+      footer {
+        margin-top: 169px;
+      }
+    </style>
+  </body>
+</html>
