--- a/src/components/post/NewsList.astro
+++ b/src/components/post/NewsList.astro
@@ -37,7 +37,7 @@ const Posts = [
       ))
     }
   </ul>
-  <a href="/news/" class="more">＞＞もっと見る</a>
+  <a href="/news" class="more">＞＞もっと見る</a>
 </section>
 <style lang="scss">
   .news_list {
