--- a/src/components/post/ReformCaseList.astro
+++ b/src/components/post/ReformCaseList.astro
@@ -63,7 +63,7 @@ const ReformPosts = [
 </section>
 <style lang="scss">
   .reform_list {
-    max-width: $baseContentWidth;
+    max-width: 1383px;
     margin-left: auto;
     margin-right: auto;
   }
