古民家再生ページ作成

--- a/src/components/common/LoopSection.astro
+++ b/src/components/common/LoopSection.astro
@@ -51,4 +51,7 @@ const { contents, class: className } = Astro.props;
   .content_title {
     margin-bottom: 63px;
   }
+  .content_text {
+    line-height: 2;
+  }
 </style>
