--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,19 +43,21 @@ const { className } = PAGES.HOME;
   .sns_list_title {
     margin-bottom: 110px;
   }
-  :global(.home .top_nav) {
-    margin-bottom: 252px;
-  }
-  :global(.home .news_list) {
-    margin-bottom: 252px;
-  }
-  :global(.home .event_list) {
-    margin-bottom: 252px;
-  }
-  :global(.home .column_list) {
-    margin-bottom: 252px;
-  }
-  :global(.home .sns_list) {
-    margin-bottom: 249px;
+  .home {
+    :global(.top_nav) {
+      margin-bottom: 252px;
+    }
+    :global(.news_list) {
+      margin-bottom: 252px;
+    }
+    :global(.event_list) {
+      margin-bottom: 252px;
+    }
+    :global(.column_list) {
+      margin-bottom: 252px;
+    }
+    :global(.sns_list) {
+      margin-bottom: 249px;
+    }
   }
 </style>
