リフォーム詳細仮実装

--- a/src/components/catch/TopCatch.astro
+++ b/src/components/catch/TopCatch.astro
@@ -9,7 +9,7 @@ import Logo from "~/img/top/top_logo.png";
   <Image
     src={TopCatch}
     alt="女性が提案する暮らし方とリフォーム"
-    class="catch-image"
+    class="catch_image"
     format="webp"
     loading={"eager"}
   />
@@ -34,6 +34,9 @@ import Logo from "~/img/top/top_logo.png";
   .catch {
     position: relative;
     text-align: center;
+  }
+  .catch_image {
+    width: 100%;
   }
   .top_catch_logo {
     position: absolute;
