--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -62,6 +62,7 @@ import { PAGES } from "../../consts";
     margin: 0 auto;
     padding-left: vw(136px, $baseWindowWidth);
     padding-right: vw(278px, $baseWindowWidth);
+    padding-bottom: 72px;
   }
   .footer-left {
     margin-top: 61px;
@@ -87,6 +88,7 @@ import { PAGES } from "../../consts";
     padding-top: 70px;
     min-height: 244px;
     text-align: center;
+    background-color: #fff;
     small {
       display: block;
       margin-top: 47px;
